--- a/notes-node/package.json
+++ b/notes-node/package.json
@@ -9,6 +9,7 @@
   "author": "Christopher J. Bischoff",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "yargs": "^4.7.1"
   }
 }
